<resources>
    <string name="app_name">档案管理</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">首页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">登录</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_true">确定</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="txt_username_can_not_empty">用户名不能为空</string>
    <string name="txt_password_can_not_empty">密码不能为空</string>
    <string name="invalid_username_password">用户名或密码不正确</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_new_password_again">请再次输入新密码</string>

    <string name="not_find_search_result">没有找到结果</string>
    <string name="click_reload">点击重新加载</string>

    <string name="txt_caseinves">处分类</string>

    <string name="txt_name">姓名： %s</string>
    <string name="txt_zhiji">职级： %s</string>
    <string name="txt_dang">党代表： %s</string>
    <string name="txt_renda">人大代表： %s</string>
    <string name="txt_zzmm">政治面貌： %s</string>
    <string name="txt_jcdx">监察对象： %s</string>
    <string name="txt_xsly">线索来源： %s</string>
    <string name="txt_slsj">受理时间： %s</string>
    <string name="txt_chsj">初核时间： %s</string>
    <string name="txt_ljsj">了结时间： %s</string>
    <string name="txt_bljg">办理机关： %s</string>
    <string name="txt_zzcl">组织处理： %s</string>
    <string name="txt_zzclqk">组织处理情况： %s</string>
    <string name="txt_dncf">党内处分： %s</string>
    <string name="txt_xzcf">行政处分： %s</string>
    <string name="txt_gwy">公务员： %s</string>

    <string name="list_caseinves_title">处分类(%s)</string>
    <string name="list_verifications_title">初核类(%s)</string>
    <string name="list_duty_report_title">述责述廉(%s)</string>
    <string name="list_letters_title">函询类(%s)</string>
    <string name="list_endings_title">了结类(%s)</string>
    <string name="list_zancuns_title">暂存类(%s)</string>
    <string name="list_gift_title">三礼上交(%s)</string>
    <string name="text_clqk">处理情况： %s</string>

    <string name="hint_input_account">请输入账号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="tab_account">账　号</string>
    <string name="text_password">密　码</string>
    <string name="txt_age">年龄：%s</string>
    <string name="txt_birth">出生年月：%s</string>
    <string name="txt_sex">性别：%s</string>
    <string name="txt_minzu">民族：%s</string>
    <string name="txt_jiguan">籍贯：%s</string>
    <string name="txt_birth_place">出生地：%s</string>
    <string name="txt_rudang_time">入党时间：%s</string>
    <string name="txt_work_time">参加工作时间：%s</string>
    <string name="txt_health">健康状况：%s</string>
    <string name="txt_zhuanyejishuzhiwu">专业技\n术职务</string>
    <string name="txt_shuxizhuanyezhuanchang">熟悉专业\n有何专长</string>
    <string name="txt_xianrenzhiwu">现任职务：</string>
    <string name="txt_liaojie_result">了结结论：%s</string>
    <string name="txt_qingkuangshuoming1">情况说明：截止2018年5月07日，%1$s （单位／系统） 共有区管干部（在职）%2$s人，其中党代表%3$s人，区委委员%4$s人，纪委%5$s人，人大代表%6$s人，政协委员%7$s人，女干部%8$s人，少数民族%9$s人</string>
    <string name="txt_qingkuangshuoming2">该单位人员中，未收到问题线索4人；目前，处分类0人；初步核实0人；谈话函询0人，了结1人；暂存0人；廉政意见0人</string>
    <string name="txt_jys">建议书：%s</string>
    <string name="txt_yjsf">移交司法：%s</string>
    <string name="txt_bxgd">八项规定：%s</string>
    <string name="txt_time">时间：%s</string>
    <string name="txt_amount">金额：%s</string>
    <string name="txt_gift_number">号码：%s</string>
    <string name="txt_mount">数量：%s</string>
    <string name="txt_money_number">面值：%s</string>
    <string name="txt_worth">价值：%s</string>
    <string name="txt_name_mc">名称：%s</string>
    <string name="txt_gift_name">礼品名：%s</string>
    <string name="txt_money_hand">礼金上交(%s)</string>
    <string name="txt_card_hand">礼卡／证劵上交(%s)</string>
    <string name="txt_gift_hand">礼品上交(%s)</string>
    <string name="txt_report_year">述责述廉年份：%s</string>
    <string name="txt_report_date">具体日期：%s</string>

</resources>
