<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_old"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/changepassword_oldpasswordicon"
        android:drawablePadding="@dimen/dimen_10"
        android:hint="请输入旧密码"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:inputType="textPassword"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_gray"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/line_gray" />

    <EditText
        android:id="@+id/editText_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/changepassword_newpasswordicon"
        android:drawablePadding="@dimen/dimen_10"
        android:hint="@string/hint_input_new_password"
        android:inputType="textPassword"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_gray"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/line_gray" />

    <EditText
        android:id="@+id/editText_new_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/changepassword_confirmpasswordicon"
        android:drawablePadding="@dimen/dimen_10"
        android:hint="@string/hint_input_new_password_again"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:inputType="textPassword"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_gray"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/divide_main_gray" />

    <Button
        android:id="@+id/btn_true"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:theme="@style/btn_theme_blue"
        android:text="@string/btn_true"
        android:textColor="@color/text_main_brownness"
        android:textSize="@dimen/sp_16" />
</LinearLayout>