<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="了结类问题线索情况表"
                android:textSize="@dimen/sp_18"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dimen_20"
                android:textColor="@color/text_black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/txt_name"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_zhiji"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/txt_zhiji"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_gray_b" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="单位："
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_danwei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_gray_b" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="职务："
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_zhiwu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_gray_b" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_xsly"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/txt_xsly"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_slsj"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/txt_slsj"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_gray_b" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="线索概述:"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_xsgs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_new_normal"
                    android:lineSpacingExtra="3dp"
                    android:padding="@dimen/dimen_5"
                    android:singleLine="false"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="问题线索描述:"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_wtxsms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_new_normal"
                    android:lineSpacingExtra="3dp"
                    android:padding="@dimen/dimen_5"
                    android:singleLine="false"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="研判处置意见:"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_ypczyj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_new_normal"
                    android:lineSpacingExtra="3dp"
                    android:padding="@dimen/dimen_5"
                    android:singleLine="false"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="处置依据:"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_czyj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_new_normal"
                    android:lineSpacingExtra="3dp"
                    android:padding="@dimen/dimen_5"
                    android:singleLine="false"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="备注:"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_new_normal"
                    android:lineSpacingExtra="3dp"
                    android:padding="@dimen/dimen_5"
                    android:singleLine="false"
                    android:text="--"
                    android:textColor="@color/text_black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>